Added build instruction